--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -13,10 +13,12 @@ $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
 
 $color-grey-dark: #777;
+$color-grey-dark-2: #999;
+$color-grey-dark-3: #333;
+
 $color-white: #fff;
 $color-black: #000;
 
-$color-red: rgb(196, 56, 56);
 
 // FONT
 $default-font-size: 1.6rem;
