--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,11 +1,11 @@
 body {
     font-family: "Lato", sans-serif;
     font-weight: 400;
-    font-size: $default-font-size;
+    /*font-size: 16px;*/
     line-height: 1.7;
     color: $color-grey-dark;
     padding: 3rem;
- }
+}
 
 .heading-primary {
     color: $color-white;
@@ -23,13 +23,18 @@ body {
         animation-name: moveInLeft;
         animation-duration: 1s;
         animation-timing-function: ease-out;
+    
+        /*
+        animation-delay: 3s;
+        animation-iteration-count: 3;
+        */
     }
+    
     &--sub {
         display: block;
         font-size: 2rem;
         font-weight: 700;
         letter-spacing: 1.75rem;
-    
         animation: moveInRight 1s ease-out;
     }
 }
@@ -46,7 +51,7 @@ body {
     transition: all .2s;
 
     &:hover {
-        transform: skewX(15deg) skewY(2deg) scale(1.1);
+        transform: skewY(2deg) skewX(15deg) scale(1.1);
         text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
     }
 }
@@ -59,7 +64,7 @@ body {
 
 .paragraph {
     font-size: $default-font-size;
-    
+
     &:not(:last-child) {
         margin-bottom: 3rem;
     }
