--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+    &,
     &:link,
     &:visited {
         text-transform: uppercase;
@@ -8,10 +9,15 @@
         border-radius: 10rem;
         transition: all .2s;
         position: relative;
-    }
+        font-size: $default-font-size;
 
+        //Change for the <button> element
+        border: none;
+        cursor: pointer;
+    }
+    
     &:hover {
-        transform: translateY(-.3rem);
+        transform: translateY(-3px);
         box-shadow: 0 1rem 2rem rgba($color-black,.2);
 
         &::after {
@@ -20,8 +26,10 @@
         }
     }
     
-    &:active {
-        transform: translateY(-.1rem);
+    &:active,
+    &:focus {
+        outline: none;
+        transform: translateY(-1px);
         box-shadow: 0 .5rem 1rem rgba($color-black,.2);
     }
     
@@ -33,7 +41,7 @@
             background-color: $color-white;
         }
     }
-    
+
     &--green {
         background-color: $color-primary;
         color: $color-white;
@@ -78,11 +86,11 @@
         background-color: $color-primary;
         color: $color-white;
         box-shadow: 0 1rem 2rem rgba($color-black, .15);
-        transform: translateY(-.2rem);
+        transform: translateY(-2px);
     }
 
     &:active {
-        box-shadow: 0 1rem 1rem rgba($color-black, .15);
+        box-shadow: 0 .5rem 1rem rgba($color-black, .15);
         transform: translateY(0);
     }
 }
