--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -3,10 +3,10 @@
     font-size: 1.5rem;
     padding: 2.5rem;
     text-align: center;
-    border-radius: .3px;
+    border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
-    transition: transform .2s;
-    
+    transition: transform .3s;
+
     &__icon {
         font-size: 6rem;
         margin-bottom: .5rem;
