--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -17,7 +17,8 @@ body {
         display: block;
         font-size: 6rem;
         font-weight: 400;
-        letter-spacing: 3.5rem;
+        letter-spacing: 2.9rem;
+        margin-left: 1.3rem;
     
         animation-name: moveInLeft;
         animation-duration: 1s;
